Updates to CS 480 material.

--- a/CS 480 Computational Geometry/Labs/01 - Python and koebe.py.ipynb
+++ b/CS 480 Computational Geometry/Labs/01 - Python and koebe.py.ipynb
@@ -550,6 +550,159 @@
     "    \n",
     "viewer.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Geometric Primitives\n",
+    "\n",
+    "When designing geometric algorithms we often need to perform a series of simple tests of the following flavor: given two points $P$ and $Q$, does a third point $R$ lie on the line through $P$ and $Q$ or not? Given a line $L$ through points $P$ and $Q$, and two other points $X$ and $Y$, do the points $X$ and $Y$ lie on the same side of $L$ or on opposite sides of $L$? Given a circle $C$ through three points $P$, $Q$, and $R$, is a fourth point $X$ inside, on, or outside the circle? Etc. \n",
+    "\n",
+    "The answers to each of these questions is either true or false, and is used as part of a decision in how the algorithm should proceed. When we talk about these algorithms in class, we will simply say something like \"if the point is inside the circle then...\" To code these algorithms, however, we have to actually code functions that can determine the answers to these true/false questions. These questions (and others like them) have a name: they are called _predicates_ and are connected to the predicate logic you studied in CS 227. The code behind these questions comes from the determinants of matrices, which are studied in linear algebra. As we discussed in class, determinants are used to compute twice the _signed_ volume of a tetrahedron (or its n-dimensional cousin an n-simplex) and this turns out to be enormously useful in developing lots of geometric primitives. \n",
+    "\n",
+    "The base of all these predicates is twice the signed area of a triangle (or, if you prefer, the signed area of a parallelogram). Suppose I give you three points, $A$, $B$, and $C$ on the parallelogram $ABCD$, like so: \n",
+    "\n",
+    "![A parallelogram ABCD](img/parallelogram.png \"A parallelogram ABCD\")\n",
+    "\n",
+    "Using a little linear algebra it can be shown that the signed area of this parallelogram is computed using the following function: \n",
+    "\n",
+    "$$Area(A, B, C) := (B_x - A_x)(C_y - A_y) - (C_x - A_x)(B_y - A_y)$$\n",
+    "\n",
+    "For a reader with linear algebra, you may note that this is the same as the determinant: \n",
+    "\n",
+    "$$\\begin{vmatrix} A_x & A_y & 1 \\\\ B_x & B_y & 1 \\\\ C_x & C_y & 1\\end{vmatrix}$$\n",
+    "\n",
+    "(As a digression, notice that we are lifting our 2D world up into 3D in the $z=1$ plane. If you are unclear on the connection between the two above, it may help to ponder the fact that the volume of a tetrahedron is 1/2 the area of the base of the tetrahedron times the height of the tetrahedron...)\n",
+    "\n",
+    "As mentioned in class, the great thing about this area function is that it is _signed_. This means that it is negative if the parallelogram is oriented in a counter-clockwise direction (in other words, if you walk around the parallelogram starting from $A$ counter-clockwise, you will encounter $B$ before $C$) and it is positive if the parallelogram is oriented in a clockwise direction. \n",
+    "\n",
+    "Notice also that we do not need to know $D$ to compute this area, and furthermore, the area of the triangle $ABC$ is simply one-half the area of the parallelogram $ABCD$. Thus we have: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def areaOfParallelogram(A, B, C):\n",
+    "    return (B.x - A.x) * (C.y - A.y) - (C.x - A.x) * (B.y - A.y)\n",
+    "\n",
+    "def areaOfTriangle(A, B, C):\n",
+    "    return 0.5 * areaOfParallelogram(A, B, C)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercises\n",
+    "\n",
+    "### Exercise 1: \n",
+    "\n",
+    "In the code block below, add code below to draw a triangle through three points which is red if the points are ordered counter-clockwise along its boundary, and blue otherwise. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "points = [PointE2.O, PointE2(100, 0), PointE2(0, 100)]\n",
+    "\n",
+    "# Your exercise 1 solution below this comment:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 2:\n",
+    "\n",
+    "Add a fourth point to the `points` list created in exercise 1. Write code to draw a second triangle between the first, second, and fourth point of `points`. Make the triangle similarly colored. Image a line through the first two points dividing the plane. When do the two triangles have the same color? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your exercise 2 solution below this comment: \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 3:\n",
+    "\n",
+    "Here is something remarkable about the signed area. It can be used to compute the (signed) area of any polygon. To do this, we are going to change the setup a bit. Let $P = (p_1, p_2, \\dots, p_n)$ be a polygon and $p$ be any other point in the plane. The signed area of the polygon is given by adding up all of the signed areas of the triangles $p p_i p_{i+1}$ formed by creating triangles between the point $p$ and each edge $p_i p_{i+1}$ of the polygon.\n",
+    "\n",
+    "In other words, $$Area(P) = \\sum_{i=1}^n Area(p, p_i, p_{i+1}).$$ This is true regardless of where the point $p$ is chosen. \n",
+    "\n",
+    "#### Question:\n",
+    "\n",
+    "Why is this true? Draw a few simple examples on paper and see if you can figure out a reason why this might be true. \n",
+    "\n",
+    "#### Coding:\n",
+    "\n",
+    "You are going to add code to compute the signed area of a polygon and investigate its properties. \n",
+    "\n",
+    "In the code below we create a polygon and a point p to use to calculate the signed area. \n",
+    "\n",
+    "1. Add a function called `signedArea` that takes as input the polygon and a point and computes the area of the polygon.\n",
+    "2. Color the polygon blue if the area is negative and red otherwise. \n",
+    "3. Add a call to the `print` function to print the area of the polygon. Investigate whether changing the location of the point `p` changes the returned area. \n",
+    "4. Try some different polygons to discover when the polygon has a negative area vs. when it has a positive area. Once you have discovered this, write a function called `reorientPolygon` that takes as input a `PolygonE2` object and returns a new `PolygonE2` object representing the same polygon (with the same vertices, though possibly not in the same order) except with opposite area sign."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from koebe.geometries.euclidean2 import PolygonE2\n",
+    "\n",
+    "polygon = PolygonE2([\n",
+    "    PointE2(50, 50), \n",
+    "    PointE2(100, 100), \n",
+    "    PointE2(150, 50), \n",
+    "    PointE2(150, 150), \n",
+    "    PointE2(50, 150)\n",
+    "])\n",
+    "\n",
+    "p = PointE2(-50, 75)\n",
+    "\n",
+    "viewer = E2Viewer()\n",
+    "\n",
+    "# Create some styles: \n",
+    "blueFillStyle = makeStyle(fill=\"blue\")\n",
+    "viewer.add(polygon, blueFillStyle)  \n",
+    "viewer.add(p)\n",
+    "viewer.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Challenge Questions\n",
+    "\n",
+    "Puzzle over the following 3 questions. The answers are online, so _do not look them up!_ The purpose of this exercise is to help you start to think geometrically and start working with geometric objects, not for you to know the answer.\n",
+    "\n",
+    "![Three challenge questions.](img/challenge.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
