--- a/CS 480 Computational Geometry/Lectures /01 - Examples.ipynb
+++ b/CS 480 Computational Geometry/Lectures /01 - Examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -268,6 +268,20 @@
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7d25558105ca4260a556cba0a69cd440",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "S2Sketch(height=600, objects='[[{\"type\": \"SegmentE3\", \"endpoints\": [[-0.03893299906420063, -0.9966230013955891…"
       ]
      },
      "metadata": {},
@@ -300,12 +314,12 @@
     "    h, l = str(randint(0, 360)), str(randint(50, 75))\n",
     "    viewer.setStyle(poly.faces[i], makeStyle(fill = f\"hsl({h}, 100%, {l}%)\"))\n",
     "\n",
-    "#viewer.show() # Show the viewer"
+    "viewer.show() # Show the viewer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -542,6 +556,20 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "07ee826ff79846d8a7be326560046e71",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "E2Sketch(height=500, objects='[[{\"type\": \"PointE2\", \"point\": [1, 0.9327685471727749]}, {\"type\": \"PointE2\", \"po…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -569,12 +597,12 @@
     "\n",
     "viewer = UnitScaleE2Sketch()\n",
     "viewer.addAll(samplePoints)\n",
-    "#viewer.show()"
+    "viewer.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -844,6 +872,20 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "693b26a7aff24720ad123e7df4ed6cde",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "S2Sketch(height=500, objects='[[{\"type\": \"PointE3\", \"point\": [0.6968665231204373, 0.6500151743443932, -0.30315…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -860,12 +902,12 @@
     "viewer.addAll(pts)\n",
     "viewer.addAll(mesh.edges)\n",
     "viewer.addAll(mesh.faces)\n",
-    "#viewer.show()"
+    "viewer.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1102,6 +1144,20 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "93295038405445c18fbf301446a56a46",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "E2Sketch(height=500, objects='[[{\"type\": \"PointE2\", \"point\": [0.6354297345975858, 0.9999999999999999]}, {\"type…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1111,7 +1167,7 @@
     "viewer = UnitScaleE2Sketch()\n",
     "viewer.addAll(mesh2.verts)\n",
     "viewer.addAll(mesh2.edges)\n",
-    "#viewer.show()"
+    "viewer.show()"
    ]
   },
   {
