--- a/CS 480 Computational Geometry/Labs/01 - Python and koebe.py.ipynb
+++ b/CS 480 Computational Geometry/Labs/01 - Python and koebe.py.ipynb
@@ -30,7 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Hello world.\")"
+    "print(\"Hello world.\")\n",
+    "%autosave 0"
    ]
   },
   {
