Finished Triangulation lab.

--- a/CS 480 Computational Geometry/Labs/02 - Polygon Triangulation.ipynb
+++ b/CS 480 Computational Geometry/Labs/02 - Polygon Triangulation.ipynb
@@ -359,20 +359,163 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A polygon in `koebe.py` is stored using the `PolygonE2` class. The constructor takes a list of `PointE2` objects representing the vertices of the polygon. Here's an example: "
+    "# Storing a polygon\n",
+    "\n",
+    "There are two natural ways to store a polygon. One is to store the vertices in order (generally counter-clockwise) in an array-based list. This is useful for applications where random access to the polygon's vertices is needed, but makes certain operations, like splitting a polygon along a diagonal more cumbersome. A second method is to store the polygon vertices as a doubly linked list. To do this we will define a container called a `Polygon` that keeps track of its `firstVertex`. Each vertex will be stored in a `Vertex` object that stores both its 2D point location (as a `PointE2` object accessible via the `.pos` attribute) and references to the previous (`.prev`) and next (`.next`) vertices in the polygon."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from koebe.geometries.euclidean2 import PolygonE2, PointE2\n",
+    "class Vertex:\n",
+    "    def __init__(self, pos: PointE2):\n",
+    "        \"\"\"\n",
+    "        Initializes the vertex at the given position.\n",
+    "        \n",
+    "        Attributes:\n",
+    "            pos: PointE2 - The position to initialize this vertex to.\n",
+    "        \"\"\"\n",
+    "        self.pos = pos\n",
+    "        self.prev = None\n",
+    "        self.next = None\n",
+    "    \n",
+    "    def setNextVertex(self, nextVertex: \"Vertex\"):\n",
+    "        \"\"\"\n",
+    "        Makes nextVertex the next vertex from this one. \n",
+    "        \"\"\"\n",
+    "        self.next = nextVertex\n",
+    "        nextVertex.prev = self\n",
     "\n",
-    "poly = PolygonE2([PointE2(115, 54), PointE2(227, 172), \n",
-    "          PointE2(238, 343), PointE2(280, 183), \n",
-    "          PointE2(402, 54), PointE2(264, 121)])"
+    "class Polygon:\n",
+    "    def __init__(self, vertexPositions = []):\n",
+    "        if len(vertexPositions) > 0:\n",
+    "            vertices = [Vertex(p) for p in vertexPositions]\n",
+    "            for i in range(len(vertices)):\n",
+    "                vertices[i - 1].setNextVertex(vertices[i])\n",
+    "            self.firstVertex = vertices[0]\n",
+    "        else:\n",
+    "            self.firstVertex = None\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        \"\"\"\n",
+    "        An iterator for the polygon that allows you to loop\n",
+    "        over a polygon's vertices using: \n",
+    "        \n",
+    "        for vertex in polygon:\n",
+    "            ... do something with the vertex object ...\n",
+    "        \"\"\"\n",
+    "        current = self.firstVertex\n",
+    "        while True:\n",
+    "            yield current\n",
+    "            current = current.next\n",
+    "            if current is self.firstVertex:\n",
+    "                break\n",
+    "    \n",
+    "    def vertexPositions(self):\n",
+    "        \"\"\"\n",
+    "        Returns the positions of all ther vertices in order.\n",
+    "        \"\"\"\n",
+    "        result = []\n",
+    "        for v in self:\n",
+    "            result.append(v.pos)\n",
+    "        return result\n",
+    "    \n",
+    "    def copy(self):\n",
+    "        \"\"\"\n",
+    "        Returns a copy of this polygon. This performs a shallow copy\n",
+    "        since PointE2 objects are immutable. \n",
+    "        \"\"\"\n",
+    "        return Polygon(self.vertexPositions())\n",
+    "    \n",
+    "    def split(self, u, v):\n",
+    "        \"\"\"\n",
+    "        Splits this polygon into two polygons. This is a destructive\n",
+    "        operation. After running this operation, the part of the polygon\n",
+    "        in order from u to v and then directly back to u is the stored\n",
+    "        in self, while the returned polygon is the other side of the split. \n",
+    "        \n",
+    "        For example, if abcd is a polygon and we split with u = a and \n",
+    "        v = c then the self polygon becomes abc and the returned polygon\n",
+    "        is cda. \n",
+    "        \n",
+    "        Note that u and v must be vertices of this polygon. \n",
+    "        \"\"\"\n",
+    "        if u.next is v or v.next is u:\n",
+    "            return None # We can't split at an edge.\n",
+    "        \n",
+    "        u2 = Vertex(u.pos)\n",
+    "        v2 = Vertex(v.pos)\n",
+    "        \n",
+    "        u2.setNextVertex(u.next)\n",
+    "        v.prev.setNextVertex(v2)\n",
+    "        \n",
+    "        u.setNextVertex(v)\n",
+    "        v2.setNextVertex(u2)\n",
+    "        \n",
+    "        self.firstVertex = u2\n",
+    "        \n",
+    "        result = Polygon()\n",
+    "        result.firstVertex = u\n",
+    "        \n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original polygon: \n",
+      "PointE2(x=0, y=0)\n",
+      "PointE2(x=100, y=0)\n",
+      "PointE2(x=100, y=100)\n",
+      "PointE2(x=0, y=100)\n",
+      "\n",
+      "After the split: \n",
+      "PointE2(x=0, y=0)\n",
+      "PointE2(x=100, y=0)\n",
+      "PointE2(x=100, y=100)\n",
+      "\n",
+      "Returned polygon: \n",
+      "PointE2(x=0, y=0)\n",
+      "PointE2(x=100, y=100)\n",
+      "PointE2(x=0, y=100)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Here is a quick example of how to use the Polygon object and \n",
+    "# split it. \n",
+    "\n",
+    "\n",
+    "poly = Polygon([PointE2(0, 0), PointE2(100, 0), \n",
+    "                PointE2(100, 100), PointE2(0, 100)])\n",
+    "A, B, C, D = tuple(poly) # Extract the vertices and name them.\n",
+    "\n",
+    "# Print out the original polygon's coordinates.\n",
+    "print(\"Original polygon: \")\n",
+    "for v in poly:\n",
+    "    print(v.pos)\n",
+    "\n",
+    "# Split the polygon between A and C\n",
+    "poly2 = poly.split(A, C)\n",
+    "\n",
+    "# This will be the polygon ABC\n",
+    "print(\"\\nAfter the split: \")\n",
+    "for v in poly:\n",
+    "    print(v.pos)\n",
+    "\n",
+    "# This will be the polygon ACD\n",
+    "print(\"\\nReturned polygon: \")\n",
+    "for v in poly2:\n",
+    "    print(v.pos)"
    ]
   },
   {
@@ -384,10 +527,9 @@
     "1. Copy the editable point set canvas5 from the code block above to a code block below to begin working. \n",
     "2. Modify the code so that it edits the polygon object `poly` instead of the `points` list. \n",
     "3. Add code to the `draw()` method to draw the polygon (i.e. connect the dots--see the ipycanvas documentation, especially the \"drawing shapes\" section). \n",
-    "4. Write a function called `findEar` that takes as input a `PolygonE2` object and returns the index `i` of an ear $p_{i-1}$, $p_i$, $p_{i+1}$.\n",
-    "5. Write a function called `vanGogh` that takes as input a `PolygonE2` object and an index `i` and returns a `PolygonE2` object that is the input polygon with the ear at index `i` removed. You may assume that the input is valid. \n",
-    "6. Write a function called `triangulate` that takes as input a `PolygonE2` object and returns a list of `SegmentE2` objects representing the diagonals of a triangulation of the input polygon (hint: use your `findEar` and `vanGogh` methods). \n",
-    "7. Modify your drawing code so that it shows the triangulation. "
+    "4. Write a function called `findEar` that takes as input a `Polygon` object and returns a `Vertex` object `v` of an ear `v.prev`, `v`, `v.next`.\n",
+    "6. Write a function called `triangulate` that takes as input a `Polygon` object and returns a list of `Polygon` objects representing the original polygon decomposed into triangles (hint: use your `findEar` method).  \n",
+    "6. Modify your drawing code so that it shows the triangulation as the points are edited. "
    ]
   },
   {
