--- a/CS 480 Computational Geometry/Labs/02 - Polygon Triangulation.ipynb
+++ b/CS 480 Computational Geometry/Labs/02 - Polygon Triangulation.ipynb
@@ -30,26 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "410193dcaa834d00aa96dfe3f4907659",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(layout=Layout(height='600px', width='600px'), size=(600, 600))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipycanvas import Canvas # Import the Canvas class\n",
     "\n",
@@ -72,15 +57,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also edit a canvas that is currently shown directly by calling more methods on it. You should already see your canvas above. Running the following code will add some blue rectangles to the existing canvas: "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You can also edit a canvas that is currently shown directly\n",
-    "# by calling more methods on it. You should already see your canvas\n",
-    "# above. Running the following code will show more: \n",
-    "\n",
     "canvas.fill_style = 'blue'\n",
     "canvas.fill_rects([30, 50, 100, 200], [250, 300, 345, 275], 15)"
    ]
@@ -100,24 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14fb67059b814be3aa24d159c2638f5b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(layout=Layout(height='600px', width='600px'), size=(600, 600))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipycanvas import Canvas, hold_canvas # Import the Canvas class\n",
     "\n",
@@ -154,24 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d71435cdf474e7698cc2f97c96632df",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(layout=Layout(height='300px', width='300px'), size=(300, 300))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipycanvas import Canvas, hold_canvas\n",
     "\n",
@@ -229,24 +187,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "658d695970ba4b26b909972c1134bae7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(layout=Layout(height='300px', width='300px'), size=(300, 300))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from koebe.geometries.euclidean2 import PointE2\n",
     "from ipycanvas import Canvas, hold_canvas\n",
@@ -283,24 +226,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "843944e088e648f4a06a62976fd0f9f4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(layout=Layout(height='600px', width='600px'), size=(600, 600))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from koebe.geometries.euclidean2 import PointE2\n",
     "from ipycanvas import Canvas, hold_canvas\n",
@@ -366,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,10 +346,7 @@
     "        \"\"\"\n",
     "        Returns the positions of all ther vertices in order.\n",
     "        \"\"\"\n",
-    "        result = []\n",
-    "        for v in self:\n",
-    "            result.append(v.pos)\n",
-    "        return result\n",
+    "        return [v.pos for v in self] # Uses the __iter__ to build a list\n",
     "    \n",
     "    def copy(self):\n",
     "        \"\"\"\n",
@@ -446,54 +371,29 @@
     "        if u.next is v or v.next is u:\n",
     "            return None # We can't split at an edge.\n",
     "        \n",
-    "        u2 = Vertex(u.pos)\n",
-    "        v2 = Vertex(v.pos)\n",
-    "        \n",
-    "        u2.setNextVertex(u.next)\n",
-    "        v.prev.setNextVertex(v2)\n",
-    "        \n",
-    "        u.setNextVertex(v)\n",
-    "        v2.setNextVertex(u2)\n",
-    "        \n",
-    "        self.firstVertex = u2\n",
-    "        \n",
     "        result = Polygon()\n",
-    "        result.firstVertex = u\n",
+    "        \n",
+    "        # Your solution here\n",
     "        \n",
     "        return result"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 68,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original polygon: \n",
-      "PointE2(x=0, y=0)\n",
-      "PointE2(x=100, y=0)\n",
-      "PointE2(x=100, y=100)\n",
-      "PointE2(x=0, y=100)\n",
-      "\n",
-      "After the split: \n",
-      "PointE2(x=0, y=0)\n",
-      "PointE2(x=100, y=0)\n",
-      "PointE2(x=100, y=100)\n",
-      "\n",
-      "Returned polygon: \n",
-      "PointE2(x=0, y=0)\n",
-      "PointE2(x=100, y=100)\n",
-      "PointE2(x=0, y=100)\n"
-     ]
-    }
-   ],
    "source": [
-    "# Here is a quick example of how to use the Polygon object and \n",
-    "# split it. \n",
+    "# Your task\n",
     "\n",
+    "1. Complete the `split` method above for the `Polygon` class and use the code block below to test it. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Here is a quick test of your split function: \n",
     "\n",
     "poly = Polygon([PointE2(0, 0), PointE2(100, 0), \n",
     "                PointE2(100, 100), PointE2(0, 100)])\n",
@@ -507,12 +407,12 @@
     "# Split the polygon between A and C\n",
     "poly2 = poly.split(A, C)\n",
     "\n",
-    "# This will be the polygon ABC\n",
+    "# Should be the polygon ABC\n",
     "print(\"\\nAfter the split: \")\n",
     "for v in poly:\n",
     "    print(v.pos)\n",
     "\n",
-    "# This will be the polygon ACD\n",
+    "# Should be the polygon ACD\n",
     "print(\"\\nReturned polygon: \")\n",
     "for v in poly2:\n",
     "    print(v.pos)"
@@ -522,14 +422,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Your task:\n",
-    "\n",
-    "1. Copy the editable point set canvas5 from the code block above to a code block below to begin working. \n",
-    "2. Modify the code so that it edits the polygon object `poly` instead of the `points` list. \n",
-    "3. Add code to the `draw()` method to draw the polygon (i.e. connect the dots--see the ipycanvas documentation, especially the \"drawing shapes\" section). \n",
-    "4. Write a function called `findEar` that takes as input a `Polygon` object and returns a `Vertex` object `v` of an ear `v.prev`, `v`, `v.next`.\n",
-    "6. Write a function called `triangulate` that takes as input a `Polygon` object and returns a list of `Polygon` objects representing the original polygon decomposed into triangles (hint: use your `findEar` method).  \n",
-    "6. Modify your drawing code so that it shows the triangulation as the points are edited. "
+    "2. Copy the editable point set canvas5 from the code block above to a code block below to begin working. \n",
+    "3. Modify the code so that it edits the polygon object `poly` instead of the `points` list. \n",
+    "4. Add code to the `draw()` method to draw the polygon (i.e. connect the dots--see the ipycanvas documentation, especially the \"drawing shapes\" section). \n",
+    "5. Write a function called `inTriangle(p, a, b, c)`, which takes in four `PointE2` objects and returns true if and only if the point `p` is in the triangle `abc`. You may want to refer to lab 01 for the basic geometric primitives code and add a `leftHandTurn(a, b, c)` function. \n",
+    "6. Write a function called `findEar` that takes as input a `Polygon` object and returns a `Vertex` object `v` of an ear `v.prev`, `v`, `v.next`.\n",
+    "7. Write a function called `triangulate` that takes as input a `Polygon` object and returns a list of `Polygon` objects representing the original polygon decomposed into triangles (hint: use your `findEar` method).  \n",
+    "8. Modify your drawing code so that it shows the triangulation as the points are edited. "
    ]
   },
   {
