--- a/CS 480 Computational Geometry/Labs/01 - Python and koebepy.ipynb
+++ b/CS 480 Computational Geometry/Labs/01 - Python and koebepy.ipynb
@@ -1427,7 +1427,10 @@
     "    return (B.x - A.x) * (C.y - A.y) - (C.x - A.x) * (B.y - A.y)\n",
     "\n",
     "def areaOfTriangle(A, B, C):\n",
-    "    return 0.5 * areaOfParallelogram(A, B, C)"
+    "    return 0.5 * areaOfParallelogram(A, B, C)\n",
+    "\n",
+    "def leftHandTurn(A, B, C):\n",
+    "    return areaOfTriangle(A, B, C) > 0"
    ]
   },
   {
